fix: (attempt) sticky on mobile device not working (iOS)

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@
     /* TODO: figure out if 0.5em can come from a var; hint, it's not var(--inline-title-margin-bottom) */
     top: calc(var(--inline-title-size) * -1 - 0.5em); 
     z-index: 2;
-    .is-mobile & {
+    .is-mobile &, .is-phone & {
         top: -1rem;
     }
 }
@@ -102,7 +102,7 @@
     z-index: 2;
 }
 .cm-embed-block:has(> div > .callout[data-callout="note-toolbar"][data-callout-metadata*="mstcky"]) {
-    .is-mobile & {
+    .is-mobile &, .is-phone & {
         top: -1rem;
     }
 }
@@ -114,7 +114,7 @@
 }
 
 .cm-embed-block:has(> div > .callout[data-callout="note-toolbar"][data-callout-metadata*="mnstcky"]) {
-    .is-mobile & {
+    .is-mobile &, .is-phone & {
         top: inherit;
         position: relative;
     }
